games/impostor-server/0.0.13/CHANGELOG.md
# Changelog<br>


<a name="impostor-server-0.0.13"></a>
### [impostor-server-0.0.13](https://github.com/truecharts/apps/compare/impostor-server-0.0.12...impostor-server-0.0.13) (2022-03-03)

#### Chore

* remove PUID from per-app env-vars if set to 568
* update docker general non-major ([#2006](https://github.com/truecharts/apps/issues/2006))



<a name="impostor-server-0.0.12"></a>
### [impostor-server-0.0.12](https://github.com/truecharts/apps/compare/impostor-server-0.0.11...impostor-server-0.0.12) (2022-03-02)

#### Chore

* update helm chart common to v8.17.2 ([#1965](https://github.com/truecharts/apps/issues/1965))



<a name="impostor-server-0.0.11"></a>
### [impostor-server-0.0.11](https://github.com/truecharts/apps/compare/impostor-server-0.0.10...impostor-server-0.0.11) (2022-02-28)

#### Chore

* rename `web_portal` to `open` ([#1957](https://github.com/truecharts/apps/issues/1957))
* update docker general non-major ([#1980](https://github.com/truecharts/apps/issues/1980))



<a name="impostor-server-0.0.10"></a>
### [impostor-server-0.0.10](https://github.com/truecharts/apps/compare/impostor-server-0.0.9...impostor-server-0.0.10) (2022-02-22)

#### Chore

* update helm chart common to v8.16.1 ([#1940](https://github.com/truecharts/apps/issues/1940))



<a name="impostor-server-0.0.9"></a>
### [impostor-server-0.0.9](https://github.com/truecharts/apps/compare/impostor-server-0.0.8...impostor-server-0.0.9) (2022-02-22)

#### Chore

* update helm chart common to v8.16.0 ([#1925](https://github.com/truecharts/apps/issues/1925))



<a name="impostor-server-0.0.8"></a>
### [impostor-server-0.0.8](https://github.com/truecharts/apps/compare/impostor-server-0.0.7...impostor-server-0.0.8) (2022-02-21)

#### Chore

* update docker general non-major ([#1924](https://github.com/truecharts/apps/issues/1924))



<a name="impostor-server-0.0.7"></a>
### [impostor-server-0.0.7](https://github.com/truecharts/apps/compare/impostor-server-0.0.6...impostor-server-0.0.7) (2022-02-16)

#### Chore

* update helm chart common to v8.15.4 ([#1879](https://github.com/truecharts/apps/issues/1879))



<a name="impostor-server-0.0.6"></a>
### [impostor-server-0.0.6](https://github.com/truecharts/apps/compare/impostor-server-0.0.5...impostor-server-0.0.6) (2022-02-08)

#### Chore

* update helm chart common to v8.15.2 ([#1870](https://github.com/truecharts/apps/issues/1870))



<a name="impostor-server-0.0.5"></a>
### [impostor-server-0.0.5](https://github.com/truecharts/apps/compare/impostor-server-0.0.4...impostor-server-0.0.5) (2022-02-07)

#### Chore

* update helm chart common to v8.15.1 ([#1864](https://github.com/truecharts/apps/issues/1864))



<a name="impostor-server-0.0.4"></a>
### [impostor-server-0.0.4](https://github.com/truecharts/apps/compare/impostor-server-0.0.3...impostor-server-0.0.4) (2022-02-06)

#### Chore

* update helm chart common to v8.15.0 ([#1856](https://github.com/truecharts/apps/issues/1856))



<a name="imposter-server-0.0.2"></a>
### imposter-server-0.0.2 (2022-02-04)

#### Feat
